# aliengo_deploy

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
include/: aliengo.hpp  io.hpp  math_utils.hpp  policy.hpp  state.hpp  tg.hpp
launch/: teleop.launch
msg/: GamepadCommand.msg  MultiFloatArray.msg
scripts/: gamepad_cmd.py
scripts/gamepad/: controllers.py
src/: main.cpp
